# bastion-backend

./: CMakeLists.txt  Makefile  database_comm  databaseq  main.cpp  sqldaemon.c  sqldaemon.h  test_comm  valgrind_test.sh
APNS/: ios_notifications.cpp  ios_notifications.h
AWS_SES_LAMBDA/: AWS_manager.cpp  EmailForwarder.cpp  EmailForwarder.h  EmailSys.cpp
Cryptography/: SeedCipher.cpp  cryptography.cpp
Database/: database_comm.cpp  database_head.h  database_manager.cpp
DatabaseV2/: DAO.h  DBService.cpp  DBService.h  DatabaseRequest.h  DeviceDAO.cpp  DeviceDAO.h  EmailDAO.cpp  EmailDAO.h  Future.h  IDatabaseRequest.h  IDeviceTokenStore.h  IEmailWriter.h  IUserReader.h  IUserWriter.h  Promise.h  Scheduler.cpp  Scheduler.h  User.cpp  User.h  UserDAO.cpp  UserDAO.h  database_comm_v2.cpp  database_comm_v2.h
DatabaseV2/GenericStuff/: DatabaseRequest.h  IDatabaseRequest.h
DatabaseV2/MobileDeviceServices/: DeviceDAO.cpp  DeviceDAO.h  IDeviceTokenStore.h
DatabaseV2/SiteServices/: ISiteReader.h  ISiteWriter.h  SiteDAO.cpp  SiteDAO.h
DatabaseV2/UserServices/: IUserReader.h  IUserWriter.h  UserDAO.cpp  UserDAO.h
Headers/: AWS_manager.h  EmailRecovery.h  EmailSys.h  SeedCipher.h  UserCreation.h  UserRecovery.h  apiHandlerBoostPool.h  circular_queue.h  conn_data_storage.h  conn_thread_pool.h  connection_data_queue.h  cryptography.h  custom_data.h  database_comm_v2.h  database_head.h  databaseq.h  global_thread_pool_tmp.h  handler_functionality.h  idek_what_this_shits_for_anymore.h  ios_notifications.h  main_helpers.h  mobile_api_handler.h  network.h  parse_message_json.h  server_thread_work.h  site_data_cache.h  thread_pool.h  validate_username.h  validation_work.cpp  validation_work.h
Implementations/: conn_data_storage.cpp  conn_thread_pool.cpp  connection_data_queue.cpp  cryptography.cpp  database_comm.cpp  global_thread_pool_tmp.cpp  parse_message_json.cpp  server_thread_work.cpp  validate_username.cpp
MainEventLoop/: main_helpers.cpp
Scratch/: Bip39.txt
SiteData/: site_data_cache.cpp  site_data_cache.h
Sources/: TODO  cryptography.cpp  database_comm.cpp  databaseq.c
Tests/: SeedCipherDemo  encryption_bats.sh  test_seed_main.cpp  testing_decoding  testttt
ToBeDeleted/: network.c  server_manager.cpp  websock.c
User/: EmailRecovery.cpp  UserCreation.cpp  UserRecovery.cpp
Validation/: validation_work.h
async_http/: apiHandlerBoostPool.cpp  handler_functionality.cpp  mobile_api_handler.cpp
